--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -6,6 +6,7 @@
       <li><a href="/categories/outerwear">Верхняя одежда</a></li>
       <li><a href="/categories/gloves">Перчатки</a></li>
       <li><a href="/categories/pants">Брюки</a></li>
+      <li><a href="/categories/accessories">Аксессуары</a></li>
 
       {{#if isFAQ}}
       <li class="active"><a href="/faq">FAQ</a></li>
