--- a/views/product.hbs
+++ b/views/product.hbs
@@ -30,8 +30,8 @@
       </div>
     </div>
     <div class="product-info">
+      <input type="hidden" id="hidden-price" value="{{product.price}}">
       <div class="product-price">
-        <input type="hidden" id="hidden-price" value="{{product.price}}">
         {{product.price}}
       </div>
       <hr>
@@ -65,6 +65,151 @@
           <button class="add-to-cart" type="submit" data-id="{{product.id}}">Добавить в корзину
             <span>&#8640;</span></button>
         </div>
+      </div>
+    </div>
+  </div>
+  <div class="recommended-section">
+    <h1>Рекомендуем к покупке</h1>
+    <div class="recommended-slider">
+      <div class="recommended-slider-arrow-left">
+        <i class="fas fa-arrow-left"></i>
+      </div>
+      <div class="recommended-slider-center">
+        <div class="recommended-slider-inner">
+          <div class="recommended-slide">
+            <div class="recommended-slide-img">
+              <img
+                src="https://cdn4.iconfinder.com/data/icons/health-care-and-first-responders-with-masks/64/doctor-asian-female-coronavirus-2-512.png"
+                alt="image">
+            </div>
+            <div class="recommended-slide-price">
+              <div class="product-price">124300</div>
+            </div>
+            <div class="recommended-slide-title">
+              Первый
+            </div>
+          </div>
+          <div class="recommended-slide">
+            <div class="recommended-slide-img">
+              <img
+                src="https://cdn4.iconfinder.com/data/icons/health-care-and-first-responders-with-masks/64/doctor-asian-male-coronavirus-2-512.png"
+                alt="image">
+            </div>
+            <div class="recommended-slide-price">
+              1000
+            </div>
+            <div class="recommended-slide-title">
+              Пузырек Крови
+            </div>
+          </div>
+          <div class="recommended-slide">
+            <div class="recommended-slide-img">
+              <img
+                src="https://cdn4.iconfinder.com/data/icons/health-care-and-first-responders-with-masks/64/doctor-white-female-coronavirus-512.png"
+                alt="image">
+            </div>
+            <div class="recommended-slide-price">
+              1000
+            </div>
+            <div class="recommended-slide-title">
+              Пузырек Крови
+            </div>
+          </div>
+          <div class="recommended-slide">
+            <div class="recommended-slide-img">
+              <img
+                src="https://cdn4.iconfinder.com/data/icons/health-care-and-first-responders-with-masks/64/nurse-asian-female-coronavirus-512.png"
+                alt="image">
+            </div>
+            <div class="recommended-slide-price">
+              1000
+            </div>
+            <div class="recommended-slide-title">
+              Пузырек Крови
+            </div>
+          </div>
+          <div class="recommended-slide">
+            <div class="recommended-slide-img">
+              <img
+                src="https://cdn4.iconfinder.com/data/icons/health-care-and-first-responders-with-masks/64/ems-white-male-coronavirus-512.png"
+                alt="image">
+            </div>
+            <div class="recommended-slide-price">
+              1000
+            </div>
+            <div class="recommended-slide-title">
+              Пузырек Крови
+            </div>
+          </div>
+          <div class="recommended-slide">
+            <div class="recommended-slide-img">
+              <img
+                src="https://cdn4.iconfinder.com/data/icons/health-care-and-first-responders-with-masks/64/police-black-female-coronavirus-512.png"
+                alt="image">
+            </div>
+            <div class="recommended-slide-price">
+              1000
+            </div>
+            <div class="recommended-slide-title">
+              Пузырек Крови
+            </div>
+          </div>
+          <div class="recommended-slide">
+            <div class="recommended-slide-img">
+              <img
+                src="https://cdn4.iconfinder.com/data/icons/health-care-and-first-responders-with-masks/64/nurse-asian-male-coronavirus-512.png"
+                alt="image">
+            </div>
+            <div class="recommended-slide-price">
+              1000
+            </div>
+            <div class="recommended-slide-title">
+              Пузырек Крови
+            </div>
+          </div>
+          <div class="recommended-slide">
+            <div class="recommended-slide-img">
+              <img
+                src="https://cdn4.iconfinder.com/data/icons/health-care-and-first-responders-with-masks/64/firefighter-white-male-coronavirus-512.png"
+                alt="image">
+            </div>
+            <div class="recommended-slide-price">
+              1000
+            </div>
+            <div class="recommended-slide-title">
+              Пузырек Крови
+            </div>
+          </div>
+          <div class="recommended-slide">
+            <div class="recommended-slide-img">
+              <img
+                src="https://cdn4.iconfinder.com/data/icons/health-care-and-first-responders-with-masks/64/ems-asian-female-coronavirus-512.png"
+                alt="image">
+            </div>
+            <div class="recommended-slide-price">
+              1000
+            </div>
+            <div class="recommended-slide-title">
+              Пузырек Крови
+            </div>
+          </div>
+          <div class="recommended-slide">
+            <div class="recommended-slide-img">
+              <img
+                src="https://cdn4.iconfinder.com/data/icons/health-care-and-first-responders-with-masks/64/pulmonologist-african-female-coronavirus-512.png"
+                alt="image">
+            </div>
+            <div class="recommended-slide-price">
+              1000
+            </div>
+            <div class="recommended-slide-title">
+              Последний
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="recommended-slider-arrow-right">
+        <i class="fas fa-arrow-right"></i>
       </div>
     </div>
   </div>
