--- a/views/admin-product-edit.hbs
+++ b/views/admin-product-edit.hbs
@@ -8,7 +8,7 @@
     </div>
   </div>
   <div class="admin-order-plates">
-    <div class="second-plate">
+    <div class="second-plate add-edit">
       <div class="second-plate-icons">
         <p class="icon"><i class="material-icons">person</i></p>
         <p class="icon"><i class="material-icons" id="edit">edit</i></p>
@@ -35,15 +35,58 @@
             <input type="number" name="price" value="{{product.price}}" disabled>
           </div>
           <hr>
-          <div class="input-field">
+          {{!-- <div class="input-field">
             <span>Файл:</span>
             <input id="image" name="image" type="file" disabled>
           </div>
           <div class="input-field">
             <span>{{product.imageUrl}}</span>
+          </div> --}}
+          <div class="input-field">
+            <span>Главное изображение:</span>
+            <input id="image" name="image" type="file" multiple disabled>
+          </div>
+          <div class="input-field main-image">
+            <img src="/{{product.imageUrl}}" alt="">
           </div>
           <hr>
           <div class="input-field">
+            <span>Дополнительные изображения:</span>
+          </div>
+          <div class="input-field additional-images">
+            {{#each images}}
+            <form action="/admin/product/add-img/{{id}}/edit/?_csrf={{@root.csrf}}" method="post"
+              enctype="multipart/form-data">
+              <div class="add-img">
+                <img src="/{{imageUrl}}" alt="{{title}}">
+                <input id="image" name="image" type="file" multiple disabled>
+                <div class="save-changes-btn">
+                  <input type="hidden" name="id" value="{{id}}">
+                  <button type="submit">Сохранить изменения</button>
+                </div>
+              </div>
+            </form>
+            <form action="/admin/product/add-img/{{id}}/remove/?_csrf={{@root.csrf}}" method="post">
+              <div class="save-changes-btn">
+                <input type="hidden" name="id" value="{{id}}">
+                <button type="submit">Удалить</button>
+              </div>
+            </form>
+            {{/each}}
+          </div>
+          <hr>
+          <form action="/admin/product/add-img/add/?_csrf={{@root.csrf}}" method="post" enctype="multipart/form-data">
+            <div class="input-field">
+              <span>Добавить изображение:</span>
+              <input id="image" name="image" type="file" multiple disabled>
+            </div>
+            <div class="save-changes-btn">
+              <input type="hidden" name="id" value="{{product.id}}">
+              <button type="submit">Сохранить изображение</button>
+            </div>
+          </form>
+          <hr>
+          <div class="input-field description">
             <label for="description">Описание:</label>
             <textarea id="description" name="description" disabled>{{product.description}}</textarea>
           </div>
