Added recommended modal frame + rec products

--- a/views/admin-product-add.hbs
+++ b/views/admin-product-add.hbs
@@ -34,6 +34,10 @@
             <label for="price">Стоимость:</label>
             <input type="number" name="price" disabled>
           </div>
+          <div class="input-field">
+            <label for="recommended">Рекомендуемый:</label>
+            <input type="checkbox" name="recommended" disabled>
+          </div>
           <hr>
           <div class="input-field">
             <span>Файл:</span>
