Add orderStep2 fetch

--- a/views/order-step1.hbs
+++ b/views/order-step1.hbs
@@ -1,5 +1,5 @@
 <div class="order-details">
-  <form action="/order/{{cartId}}/step2" method="POST">
+  <form class="order-form" action="/order/{{cartId}}/step2" method="POST">
     <h1>Оформление заказа</h1>
     <p class="p-details"></p>
 
