--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -123,7 +123,7 @@
       <h3>Восстановление пароля</h3>
       <p>Введите e-mail и мы пришлём ссылку для восстановления пароля.</p>
     </div>
-    <form action="#" method="post">
+    <form action="/auth/reset" method="post">
       <div class="forgot-info">
         <p class="p-input">Эл. почта</p>
         <input type="text" name="email">
