--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,6 +5,7 @@
 @import '/public/css/pages/profile.css';
 @import '/public/css/pages/faq.css';
 @import '/public/css/pages/password.css';
+
 /* modals */
 @import '/public/css/modals/cart-modal.css';
 @import '/public/css/modals/login-modal.css';
@@ -14,6 +15,10 @@
 @import '/public/css/modals/status-check-order.css';
 @import '/public/css/modals/recommended-modal.css';
 @import '/public/css/modals/flash-message.css';
+
+/* mobile css */
+@import '/public/css/mobiles/maxwidth420/style.css';
+
 
 body {
   font-family: 'EB Garamond', serif;
@@ -60,7 +65,7 @@ body {
   position: relative;
 }
 
-.lower-header .nav .navbar .login_cart {
+.lower-header .nav .navbar .login_cart_burger {
   position: absolute;
   top: -10px;
   right: 5%;
@@ -68,29 +73,33 @@ body {
   align-items: center;
 }
 
-.lower-header .nav .navbar .login_cart div button {
+.lower-header .nav .navbar .login_cart_burger div button {
   border: none;
   background-color: rgba(0, 0, 0, 0);
   color: #fff;
   font-size: 15px;
 }
 
-.lower-header .nav .navbar .login_cart div:first-child {
+.lower-header .nav .navbar .login_cart_burger div:first-child {
   margin-right: 15px;
 }
 
-.lower-header .nav .navbar .login_cart .cart {
+.lower-header .nav .navbar .login_cart_burger .cart {
   display: flex;
 }
 
-.lower-header .nav .navbar .login_cart .cart p {
+.lower-header .nav .navbar .login_cart_burger .cart p {
   color: #fff;
-  padding-top: 7px;
+  padding-top: 1px;
 }
 
-.lower-header .nav .navbar .login_cart .cart img {
+.lower-header .nav .navbar .login_cart_burger .cart img {
   width: 30px;
   height: auto;
+}
+
+.lower-header .nav .navbar .login_cart_burger .burger {
+  display: none;
 }
  
 
@@ -247,7 +256,7 @@ body {
 }
 
 /* !!!!!!!!!! */
-.footer-content .nav .login_cart {
+.footer-content .nav .login_cart_burger {
   display: none;
 }
 /* !!!!!!!!!! */
