--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -76,6 +76,27 @@
     <input type="hidden" id="csrf" name="_csrf" value="{{csrf}}">
   </div>
 </div>
+<div class="categories-modal">
+  <div class="categories-close">
+    <p>Закрыть</p>
+  </div>
+
+  <div class="nav">
+    <div class="navbar">
+      <ul class="menu-list">
+        <a href="/categories/weapons"><li>Оружие</li></a>
+        <a href="/categories/hats"><li>Головные уборы</li></a>
+        <a href="/categories/outerwear"><li>Верхняя одежда</li></a>
+        <a href="/categories/gloves"><li>Перчатки</li></a>
+        <a href="/categories/pants"><li>Брюки</li></a>
+        <a href="/categories/accessories"><li>Аксессуары</li></a>
+        <a href="/faq"><li>FAQ</li></a>
+        <li class="check-status-btn">Статус заказа</li>
+      </ul>
+    </div>
+  </div>
+</div>
+
 
 <div class="modal-bg">
   <div class="login-modal">
@@ -206,6 +227,7 @@
     </div>
   </div>
 </div>
+
 <div class="flash-message">
   <p></p>
   <div class="close-flash-btn" data-modal="flash-message">
