--- a/public/css/modals/categories-modal.css
+++ b/public/css/modals/categories-modal.css
@@ -1,25 +1,54 @@
 /* modals */
 
-input[type='checkbox']
-{
+.categories-modal {
   display: none;
 }
 
-.categories-modal {
-  box-sizing: border-box;
-  position: fixed;
-  height: 100vh;
-  max-width: 380px !important;
-  width: 100%;
-  top: 0;
-  right: -380px;
-  background: rgb(255, 255, 255);
-  z-index: 120;
-  transition: all .5s;
-  overflow-y: scroll;
-} 
+@media only screen and (min-device-width : 321px) and (max-device-width : 480px) {
+  input[type = 'checkbox'] {
+    display: none;
+  }
 
-input[type='checkbox']:checked ~ .categories-modal
-{
-  transform: translateX(350px);
+  .categories-modal {
+    display: block;
+    box-sizing: border-box;
+    position: fixed;
+    height: 100vh;
+    max-width: 480px;
+    width: 100%;
+    top: 0;
+    right: -380px;
+    background: rgb(255, 255, 255);
+    z-index: 120;
+    transition: all .5s;
+    overflow-y: scroll;
+  }
+
+
+  input[type='checkbox']:checked~.categories-modal {
+    transform: translateX(350px);
+  }
+
+  .categories-modal .categories-close {
+    height: 40px;
+    line-height: 40px;
+    text-align: right;
+    padding-right: 10px;
+    color: rgb(150, 150, 150);
+  }
+
+  .categories-modal .nav .navbar {}
+
+  .categories-modal .nav .navbar .menu-list li {
+    height: 50px;
+    line-height: 50px;
+    border-bottom: 1px solid rgb(243, 243, 243);
+    color: #000;
+    padding-left: 10px;
+  }
+
+  .categories-modal .nav .navbar .menu-list a {
+    text-decoration: none;
+    color: #000;
+  }
 }
