--- a/public/css/modals/forgot-password-modal.css
+++ b/public/css/modals/forgot-password-modal.css
@@ -13,6 +13,15 @@
   z-index: 100;
 }
 
+@media only screen and (min-device-width : 321px) and (max-device-width : 480px) {
+  .modal-bg .forgot-modal {
+    top: 65px;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+  }
+}
+
 .modal-bg .forgot-modal .forgot-text h3 {
   font-weight: 700;
   font-size: 20px;
