--- a/public/css/pages/password.css
+++ b/public/css/pages/password.css
@@ -6,6 +6,17 @@
   padding: 50px 100px;
 }
 
+@media only screen and (min-device-width : 321px) and (max-device-width : 480px) {
+  .password-section {
+    margin-top: -25px;
+    box-sizing: border-box;
+    min-height: 500px;
+    height: 100%;
+    background: rgb(243, 243, 243);
+    padding: 25px 5%;
+  }
+}
+
 .registration-modal {
   box-sizing: border-box;
   background-color: rgb(243, 243, 243);
@@ -14,6 +25,18 @@
   padding: 0 20px;
   padding-top: 40px;
   z-index: 100;
+}
+
+@media only screen and (min-device-width : 321px) and (max-device-width : 480px) {
+  .registration-modal {
+    box-sizing: border-box;
+    background-color: rgb(243, 243, 243);
+    max-width: 500px;
+    width: 100%;
+    padding: 0 20px;
+    padding-top: 0px;
+    z-index: 100;
+  }
 }
 
 .registration-modal .heading {
@@ -77,79 +100,3 @@
   font-size: 12px;
   text-transform: uppercase;
 }
-
-/* .faq-section {
-  box-sizing: border-box;
-  min-height: 500px;
-  height: 100%;
-  background: rgb(243, 243, 243);
-  padding: 100px 100px;
-}
-
-.faq-section .faq-list .faq-item .faq-item-header {
-  box-sizing: border-box;
-  border: 2px solid black;
-  width: 330px;
-  height: 50px;
-  border-radius: 30px;
-  line-height: 50px;
-  padding-left: 20px;
-  padding-right: 20px;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  display: flex;
-  justify-content: space-between;
-}
-
-.faq-section .faq-list .faq-item:nth-child(2) .faq-item-header {
-  margin-top: 30px;
-}
-
-.faq-section .faq-list .faq-item .faq-item-wrapper {
-  max-height: 0;
-  overflow: hidden;
-  max-width: 700px;
-  transition: max-height 1s;
-  margin-top: 20px;
-}
-
-.faq-section .faq-list .faq-item .faq-item-wrapper .faq-item-content .faq-block {  
-  margin-top: 20px;
-}
-
-.faq-section .faq-list .faq-item .faq-item-wrapper .faq-item-content .faq-block h3 {
-  font-weight: 700;  
-  font-size: 25px;
-  letter-spacing: .6px;
-}
-
-.faq-section .faq-list .faq-item .faq-item-wrapper .faq-item-content .faq-block p {
-  margin-top: 10px;
-  letter-spacing: .6px;
-  line-height: 20px;
-}
-
-.faq-section .faq-list .faq-item .faq-item-wrapper.show {
-  display: block;
-  max-width: 700px;
-  width: 100%;
-  max-height: 1000px;
-  transition: max-height 1s;
-  margin-top: 20px;
-}
-
-.faq-section .faq-list .faq-item .faq-item-wrapper.show .faq-item-content .faq-block {  
-  margin-top: 20px;
-}
-
-.faq-section .faq-list .faq-item .faq-item-wrapper.show .faq-item-content .faq-block h3 {
-  font-weight: 700;  
-  font-size: 25px;
-  letter-spacing: .6px;
-}
-
-.faq-section .faq-list .faq-item .faq-item-wrapper.show .faq-item-content .faq-block p {
-  margin-top: 10px;
-  letter-spacing: .6px;
-  line-height: 20px;
-} */
